--- a/index.html
+++ b/index.html
@@ -93,13 +93,12 @@
             <input type="password" id="parent-password" placeholder="Parent Password" required>
             <input type="number" id="timer-duration" placeholder="Duration (minutes)" min="1" required>
             <button type="submit">Login</button>
-            <p>Don't have an account? <span id="showSignup" style="cursor:pointer; color:#FF5733;">Sign Up</span></p>
         </form>
 
-        <div class="signup-form"> <!-- Signup form -->
+        <div class="signup-form">
             <h2>Sign Up</h2>
             <form id="signup-form">
-                <input type="text" id="signup-username" placeholder="Username" required>
+                <input type="text" id="signup-name" placeholder="Full Name" required>
                 <input type="email" id="signup-email" placeholder="Email" required>
                 <input type="password" id="signup-password" placeholder="Password" required>
                 <button type="submit">Sign Up</button>
@@ -137,6 +136,7 @@
                 return response.json();
             })
             .then(data => {
+                // Handle successful login
                 alert(data.message);
                 // Save timer settings
                 const timerDuration = parseInt(timerDurationInput, 10) * 60; // Convert minutes to seconds
@@ -155,18 +155,18 @@
 
         function signup(event) {
             event.preventDefault(); // Prevent page reload
-            const username = document.getElementById('signup-username').value;
+            const name = document.getElementById('signup-name').value;
             const email = document.getElementById('signup-email').value;
             const password = document.getElementById('signup-password').value;
 
-            // Prepare the signup data
+            // Prepare the sign-up data
             const signupData = {
-                username: username,
+                username: name, // Assuming you want to use name as username
                 email: email,
                 password: password,
             };
 
-            // Send signup request to the backend
+            // Send sign-up request to the backend
             fetch('http://localhost:3000/api/register', {
                 method: 'POST',
                 headers: {
@@ -176,14 +176,13 @@
             })
             .then(response => {
                 if (!response.ok) {
-                    throw new Error('Registration failed!');
+                    throw new Error('Sign-up failed!');
                 }
                 return response.json();
             })
             .then(data => {
+                // Handle successful sign-up
                 alert(data.message);
-                document.querySelector('.signup-form').style.display = 'none';
-                document.querySelector('#login-form').style.display = 'block';
             })
             .catch(error => {
                 alert(error.message);
@@ -192,16 +191,6 @@
 
         document.getElementById('login-form').addEventListener('submit', login);
         document.getElementById('signup-form').addEventListener('submit', signup);
-
-        document.getElementById('showSignup').addEventListener('click', function() {
-            document.querySelector('.signup-form').style.display = 'block';
-            document.querySelector('#login-form').style.display = 'none';
-        });
-
-        document.getElementById('showLogin').addEventListener('click', function() {
-            document.querySelector('.signup-form').style.display = 'none';
-            document.querySelector('#login-form').style.display = 'block';
-        });
     </script>
 </body>
 </html>
