--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             <input type="password" id="parent-password" placeholder="Parent Password" required>
             <input type="number" id="timer-duration" placeholder="Duration (minutes)" min="1" required>
             <button type="submit">Login</button>
+            <p>Don't have an account? <span id="showSignup" style="cursor:pointer; color:#FF5733;">Sign Up</span></p>
         </form>
 
         <div class="signup-form">
@@ -102,8 +103,8 @@
                 <input type="email" id="signup-email" placeholder="Email" required>
                 <input type="password" id="signup-password" placeholder="Password" required>
                 <button type="submit">Sign Up</button>
+                <p>Already have an account? <span id="showLogin" style="cursor:pointer; color:#FF5733;">Login</span></p>
             </form>
-            <p>Already have an account? <span id="showLogin" style="cursor:pointer; color:#FF5733;">Login</span></p>
         </div>
     </div>
 
@@ -159,14 +160,14 @@
             const email = document.getElementById('signup-email').value;
             const password = document.getElementById('signup-password').value;
 
-            // Prepare the sign-up data
+            // Prepare the signup data
             const signupData = {
-                username: name, // Assuming you want to use name as username
+                username: email, // Assuming you want to use email as username
                 email: email,
                 password: password,
             };
 
-            // Send sign-up request to the backend
+            // Send signup request to the backend
             fetch('http://localhost:3000/api/register', {
                 method: 'POST',
                 headers: {
@@ -176,13 +177,16 @@
             })
             .then(response => {
                 if (!response.ok) {
-                    throw new Error('Sign-up failed!');
+                    throw new Error('Signup failed!');
                 }
                 return response.json();
             })
             .then(data => {
-                // Handle successful sign-up
                 alert(data.message);
+                document.getElementById('signup-form').reset();
+                // Switch to login form after signup
+                document.querySelector('.signup-form').style.display = 'none';
+                document.getElementById('login-form').style.display = 'flex';
             })
             .catch(error => {
                 alert(error.message);
@@ -191,6 +195,14 @@
 
         document.getElementById('login-form').addEventListener('submit', login);
         document.getElementById('signup-form').addEventListener('submit', signup);
+        document.getElementById('showSignup').addEventListener('click', function() {
+            document.querySelector('.signup-form').style.display = 'flex';
+            document.getElementById('login-form').style.display = 'none';
+        });
+        document.getElementById('showLogin').addEventListener('click', function() {
+            document.querySelector('.signup-form').style.display = 'none';
+            document.getElementById('login-form').style.display = 'flex';
+        });
     </script>
 </body>
 </html>
