--- a/index.html
+++ b/index.html
@@ -27,15 +27,25 @@
             font-size: 1.5rem;
             color: #333;
         }
-        form {
-            background-color: #FFF; /* White background for form */
-            border-radius: 10px; /* Rounded corners */
-            padding: 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        .form-container {
             display: flex;
             flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 20px; /* Space between forms */
+            width: 100%;
+            max-width: 400px; /* Max width for forms */
+            margin: 0 auto; /* Center forms */
+            background-color: #FFF; /* White background for form */
+            border-radius: 10px; /* Rounded corners */
+            padding: 20px; /* Padding inside form */
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Shadow for depth */
+        }
+        form {
+            display: flex;
+            flex-direction: column; /* Stack inputs vertically */
             gap: 15px; /* Space between inputs */
-            width: 300px; /* Fixed width */
+            width: 100%; /* Full width */
         }
         input {
             padding: 10px;
@@ -72,11 +82,6 @@
             color: white;
             font-size: 1.5rem;
             margin: 0; /* Remove margin */
-        }
-        .form-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
         }
         .signup-form {
             display: none; /* Initially hidden */
@@ -206,6 +211,7 @@
     </script>
 </body>
 </html>
+
 
 
 
