--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
         .signup-form {
             display: none; /* Initially hidden */
         }
+        .signup-form h2 {
+            color: #FF5733; /* Bright color for heading */
+            font-size: 2rem; /* Slightly smaller than main heading */
+            margin-bottom: 20px; /* Space below the heading */
+        }
     </style>
 </head>
 <body>
@@ -102,6 +107,7 @@
         </form>
 
         <div class="signup-form">
+            <h2>Sign Up</h2> <!-- Centered signup heading -->
             <form id="signup-form">
                 <input type="text" id="signup-name" placeholder="Full Name" required>
                 <input type="email" id="signup-email" placeholder="Email" required>
@@ -210,7 +216,6 @@
     </script>
 </body>
 </html>
-
 
 
 
