--- a/E-learning.html
+++ b/E-learning.html
@@ -152,7 +152,7 @@
         </div>
         <div class="subject-box" onclick="showSubject('Arts')">
             <a href="arts.html" style="color: rgb(43, 40, 40); text-decoration: none;">
-            <img src="arts.jpg" alt="Arts Icon">
+            <img src="arts.png" alt="Arts Icon">
             Arts</a>
         </div>
     </div>
