--- a/welcome.html
+++ b/welcome.html
@@ -17,6 +17,7 @@
             background-size: 400% 400%;
             animation: gradientAnimation 5s ease infinite;
             font-family: 'Patrick Hand', cursive;
+            overflow: hidden; /* Prevents scrollbars from appearing */
         }
 
         @keyframes gradientAnimation {
@@ -40,6 +41,12 @@
             font-size: 2rem;
             color: #ff6347;
             margin-bottom: 15px;
+            animation: textPop 0.5s ease forwards;
+        }
+
+        @keyframes textPop {
+            0% { transform: scale(0); opacity: 0; }
+            100% { transform: scale(1); opacity: 1; }
         }
 
         .thought {
@@ -53,6 +60,13 @@
             width: 150px;
             margin: 0 auto 15px auto;
             display: block;
+            animation: dance 1s infinite; /* Animation added */
+        }
+
+        @keyframes dance {
+            0% { transform: translateY(0); }
+            50% { transform: translateY(-10px); }
+            100% { transform: translateY(0); }
         }
 
         button {
@@ -68,7 +82,7 @@
         }
 
         button:hover {
-            transform: scale(1.05);
+            transform: scale(1.05) translateY(-5px); /* Bouncing effect */
             background-color: #ff4500;
         }
 
@@ -143,12 +157,16 @@
     </div>
 
     <audio id="welcome-sound" src="welcome-sound.mp3" preload="auto"></audio>
+    <audio id="hover-sound" src="hover-sound.mp3" preload="auto"></audio> <!-- Hover sound -->
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/canvas-confetti/1.5.1/confetti.browser.min.js"></script> <!-- Confetti library -->
     <script>
         function goToHomePage() {
             document.body.classList.add('fade-out');
             setTimeout(() => {
                 playSound();
+                // Trigger confetti before navigating
+                confetti();
                 window.location.href = 'home.html';
             }, 1000); // Wait for the fade-out animation
         }
@@ -161,10 +179,16 @@
         window.onload = () => {
             document.getElementById('speech-bubble').classList.remove('hidden');
         };
+
+        // Add hover sound effect on button
+        const button = document.querySelector('button');
+        button.onmouseover = () => {
+            var hoverSound = document.getElementById('hover-sound');
+            hoverSound.play();
+        };
     </script>
 </body>
 </html>
-
 
 
 
