--- a/index.html
+++ b/index.html
@@ -106,12 +106,14 @@
             <p>Don't have an account? <span id="showSignup" style="cursor:pointer; color:#FF5733;">Sign Up</span></p>
         </form>
 
+        <!-- Sign-up form -->
         <div class="signup-form">
-            <h2>Sign Up</h2> <!-- Centered signup heading -->
+            <h2>Sign Up for Alpha Kids</h2> <!-- Sign-up heading -->
             <form id="signup-form">
                 <input type="text" id="signup-name" placeholder="Full Name" required>
                 <input type="email" id="signup-email" placeholder="Email" required>
                 <input type="password" id="signup-password" placeholder="Password" required>
+                <input type="password" id="parent-password-signup" placeholder="Parent Password" required> <!-- Added parent password for signup -->
                 <button type="submit">Sign Up</button>
                 <p>Already have an account? <span id="showLogin" style="cursor:pointer; color:#FF5733;">Login</span></p>
             </form>
