--- a/index.html
+++ b/index.html
@@ -83,11 +83,16 @@
             font-size: 1.5rem;
             margin: 0;
         }
+        .signup-form {
+            display: none;
+            text-align: center; /* Center text in the signup form */
+            width: 100%; /* Ensure it takes full width */
+        }
         .signup-form h2 {
             color: #FF5733;
             font-size: 2.5rem;
             margin-bottom: 20px;
-            text-align: center;
+            text-align: center; /* Center the heading */
         }
     </style>
 </head>
@@ -104,7 +109,7 @@
             <p>Don't have an account? <span id="showSignup" style="cursor:pointer; color:#FF5733;">Sign Up</span></p>
         </form>
 
-        <div class="signup-form" style="display:none;">
+        <div class="signup-form">
             <h2>Sign Up</h2>
             <form id="signup-form">
                 <input type="text" id="signup-name" placeholder="Full Name" required>
@@ -129,9 +134,6 @@
     </script>
 </body>
 </html>
-
-
-
 
 
 
